Support for minimal title

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -58,6 +58,7 @@
 			"scripts/kindling.notificationpublisher.js",
 			"scripts/kindling.contentscript.js",
 			"scripts/kindling.minimalinterface.js",
+			"scripts/kindling.minimaltitle.js",
 			"scripts/kindling.expandabbreviations.js",
 			"scripts/kindling.history.js"
 		]
